--- a/composer.json
+++ b/composer.json
@@ -80,7 +80,7 @@
         "php-http/httplug-bundle": "^1.14",
         "pragmarx/recovery": "^0.1.0",
         "predis/predis": "v1.1.x-dev",
-        "scheb/two-factor-bundle": "^4.4",
+        "scheb/two-factor-bundle": "4.5.0",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.2",
         "sentry/sentry-symfony": "^3.0",
