--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -18,6 +18,7 @@ wallabag_core:
         ru: 'Русский'
         ja: '日本語'
         zh: '简体中文'
+        uk: 'Українська'
     items_on_page: 12
     theme: material
     language: '%locale%'
