--- a/composer.json
+++ b/composer.json
@@ -77,6 +77,7 @@
         "nelmio/api-doc-bundle": "^2.13.2",
         "nelmio/cors-bundle": "~1.5",
         "ocramius/proxy-manager": "^2.1.1",
+        "pagerfanta/doctrine-orm-adapter": "^2.4",
         "php-amqplib/rabbitmq-bundle": "^1.14",
         "php-http/guzzle5-adapter": "^2.0",
         "php-http/httplug-bundle": "^1.14",
