--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "engines": {
-    "node": ">=6.10"
+    "node": ">=12"
   },
   "repository": {
     "type": "git",
@@ -36,31 +36,32 @@
     "url": "https://github.com/wallabag/wallabag/issues"
   },
   "devDependencies": {
-    "autoprefixer": "^7.1.1",
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
-    "babel-preset-env": "^1.4.0",
-    "css-loader": "^0.28.0",
-    "eslint": "^4.0.0",
-    "eslint-config-airbnb-base": "^11.1.3",
-    "eslint-loader": "^1.7.1",
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "autoprefixer": "^9.8.6",
+    "babel-eslint": "^10.1.0",
+    "babel-loader": "^8.1.0",
+    "css-loader": "^4.2.2",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.2.0",
-    "extract-text-webpack-plugin": "^2.1.0",
-    "file-loader": "^0.11.0",
+    "file-loader": "^6.0.0",
     "lato-font": "^3.0.0",
-    "node-sass": "^4.5.2",
-    "postcss-loader": "^2.0.5",
-    "sass-loader": "^6.0.3",
-    "style-loader": "^0.18.2",
+    "mini-css-extract-plugin": "^0.10.0",
+    "node-sass": "^4.14.1",
+    "postcss-loader": "^3.0.0",
+    "sass-loader": "^10.0.0",
+    "style-loader": "^1.2.1",
     "stylelint": "^7.9.0",
     "stylelint-config-standard": "^16.0.0",
-    "stylelint-webpack-plugin": "^0.7.0",
-    "url-loader": "^0.5.8",
-    "webpack": "^2.3.2",
-    "webpack-dev-server": "^2.4.4",
-    "webpack-manifest-plugin": "^1.1.0",
-    "webpack-merge": "^4.1.0"
+    "stylelint-webpack-plugin": "^1.0.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.0.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-merge": "^5.1.2"
   },
   "dependencies": {
     "annotator": "git://github.com/wallabag/annotator.git#0f076c7d371ed25eb0793346f46982d90f2c4c85",
@@ -76,7 +77,7 @@
     "mathjax": "^3.0.0",
     "mousetrap": "^1.6.0",
     "ptsans-npm-webfont": "^0.0.4",
-    "roboto-fontface": "^0.7.0",
+    "roboto-fontface": "^0.10.0",
     "waypoints": "^4.0.1"
   },
   "scripts": {
