--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
     "webpack-merge": "^5.1.2"
   },
   "dependencies": {
-    "annotator": "git://github.com/wallabag/annotator.git#0f076c7d371ed25eb0793346f46982d90f2c4c85",
+    "annotator": "wallabag/annotator#master",
     "clipboard": "^2.0.4",
     "hammerjs": "^2.0.8",
     "highlight.js": "^9.12.0",
