setup local + imap authentication
Login workflow:
  1) Submit form
  2) User exists -> 3), else 4)
  3) Password match -> Success, else -> 4)
  4) Imap server refuses credentials -> Fail, else 5)
  5) Create user if needed
  6) Success

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -411,3 +411,15 @@ httplug:
 # define custom entity so we can override length attribute to fix utf8mb4 issue
 craue_config:
     entity_name: Wallabag\CoreBundle\Entity\InternalSetting
+
+seb_authenticator:
+    guards:
+        local_accounts:
+            form_login: ~
+            local_credentials: ~
+            bad_credentials: 'try_next'
+        imap_accounts:
+            form_login: ~
+            imap_credentials:
+                mailbox: "%seb_authenticator_imap_mailbox%"
+            missing_user: 'create'
