--- a/composer.json
+++ b/composer.json
@@ -84,6 +84,7 @@
         "pragmarx/recovery": "^0.1.0",
         "predis/predis": "^1.1.3",
         "scheb/two-factor-bundle": "^4.11.0",
+        "seb/authenticator-bundle": "^0.0.2",
         "sensio/distribution-bundle": "^5.0",
         "sensio/framework-extra-bundle": "^5.2",
         "sentry/sentry-symfony": "3.2.1",
