--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,3 +1,13 @@
 {
-  "extends": "stylelint-config-standard"
+  "extends": "stylelint-config-standard",
+  "plugins": [
+    "stylelint-scss"
+  ],
+  rules: {
+    'at-rule-no-unknown': null,
+    'no-duplicate-selectors': null,
+    'font-family-no-missing-generic-family-keyword': null,
+    'no-descending-specificity': null,
+    'scss/at-rule-no-unknown': true,
+  },
 }
