--- a/package.json
+++ b/package.json
@@ -38,29 +38,32 @@
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.0.2",
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.1",
-    "css-loader": "^4.3.0",
+    "css-loader": "^5.0.1",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "^6.2.0",
     "lato-font": "^3.0.0",
-    "mini-css-extract-plugin": "^1.2.1",
+    "mini-css-extract-plugin": "^1.3.0",
     "node-sass": "^5.0.0",
-    "postcss-loader": "^3.0.0",
+    "postcss": "^8.1.6",
+    "postcss-loader": "^4.0.4",
+    "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
     "style-loader": "^2.0.0",
-    "stylelint": "^7.9.0",
-    "stylelint-config-standard": "^16.0.0",
-    "stylelint-webpack-plugin": "^1.0.0",
+    "stylelint": "^13.7.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-scss": "^3.18.0",
+    "stylelint-webpack-plugin": "^2.1.1",
     "url-loader": "^4.1.1",
-    "webpack": "^4.44.2",
-    "webpack-cli": "^3.3.12",
+    "webpack": "^5.4.0",
+    "webpack-cli": "^4.2.0",
     "webpack-dev-server": "^3.11.0",
-    "webpack-manifest-plugin": "^2.2.0",
+    "webpack-manifest-plugin": "^3.0.0-rc.0",
     "webpack-merge": "^5.3.0"
   },
   "dependencies": {
