--- a/web/wallassets/manifest.json
+++ b/web/wallassets/manifest.json
@@ -1,89 +1,84 @@
 {
-  "baggy.css": "baggy.css",
-  "baggy.js": "baggy.js",
-  "baggy.css.map": "baggy.css.map",
-  "baggy.js.map": "baggy.js.map",
   "material.css": "material.css",
   "material.js": "material.js",
-  "material.css.map": "material.css.map",
-  "material.js.map": "material.js.map",
+  "baggy.css": "baggy.css",
+  "baggy.js": "baggy.js",
   "public.css": "public.css",
   "public.js": "public.js",
-  "public.css.map": "public.css.map",
-  "public.js.map": "public.js.map",
-  "fonts/IcoMoon-Free.ttf": "fonts/IcoMoon-Free.ttf",
-  "fonts/MaterialIcons-Regular.eot": "fonts/MaterialIcons-Regular.eot",
-  "fonts/MaterialIcons-Regular.ttf": "fonts/MaterialIcons-Regular.ttf",
-  "fonts/MaterialIcons-Regular.woff": "fonts/MaterialIcons-Regular.woff",
-  "fonts/MaterialIcons-Regular.woff2": "fonts/MaterialIcons-Regular.woff2",
-  "fonts/Roboto-Bold.woff": "fonts/Roboto-Bold.woff",
-  "fonts/Roboto-Bold.woff2": "fonts/Roboto-Bold.woff2",
-  "fonts/Roboto-Light.woff": "fonts/Roboto-Light.woff",
-  "fonts/Roboto-Light.woff2": "fonts/Roboto-Light.woff2",
-  "fonts/Roboto-Medium.woff": "fonts/Roboto-Medium.woff",
-  "fonts/Roboto-Medium.woff2": "fonts/Roboto-Medium.woff2",
-  "fonts/Roboto-Regular.woff": "fonts/Roboto-Regular.woff",
-  "fonts/Roboto-Regular.woff2": "fonts/Roboto-Regular.woff2",
-  "fonts/Roboto-Thin.woff": "fonts/Roboto-Thin.woff",
-  "fonts/Roboto-Thin.woff2": "fonts/Roboto-Thin.woff2",
-  "fonts/lato-black-italic.woff": "fonts/lato-black-italic.woff",
-  "fonts/lato-black-italic.woff2": "fonts/lato-black-italic.woff2",
-  "fonts/lato-black.woff": "fonts/lato-black.woff",
-  "fonts/lato-black.woff2": "fonts/lato-black.woff2",
-  "fonts/lato-bold-italic.woff": "fonts/lato-bold-italic.woff",
-  "fonts/lato-bold-italic.woff2": "fonts/lato-bold-italic.woff2",
-  "fonts/lato-bold.woff": "fonts/lato-bold.woff",
-  "fonts/lato-bold.woff2": "fonts/lato-bold.woff2",
-  "fonts/lato-hairline-italic.woff": "fonts/lato-hairline-italic.woff",
-  "fonts/lato-hairline-italic.woff2": "fonts/lato-hairline-italic.woff2",
-  "fonts/lato-hairline.woff": "fonts/lato-hairline.woff",
-  "fonts/lato-hairline.woff2": "fonts/lato-hairline.woff2",
-  "fonts/lato-heavy-italic.woff": "fonts/lato-heavy-italic.woff",
-  "fonts/lato-heavy-italic.woff2": "fonts/lato-heavy-italic.woff2",
-  "fonts/lato-heavy.woff": "fonts/lato-heavy.woff",
-  "fonts/lato-heavy.woff2": "fonts/lato-heavy.woff2",
-  "fonts/lato-light-italic.woff": "fonts/lato-light-italic.woff",
-  "fonts/lato-light-italic.woff2": "fonts/lato-light-italic.woff2",
-  "fonts/lato-light.woff": "fonts/lato-light.woff",
-  "fonts/lato-light.woff2": "fonts/lato-light.woff2",
-  "fonts/lato-medium-italic.woff": "fonts/lato-medium-italic.woff",
-  "fonts/lato-medium-italic.woff2": "fonts/lato-medium-italic.woff2",
-  "fonts/lato-medium.woff": "fonts/lato-medium.woff",
-  "fonts/lato-medium.woff2": "fonts/lato-medium.woff2",
   "fonts/lato-normal-italic.woff": "fonts/lato-normal-italic.woff",
-  "fonts/lato-normal-italic.woff2": "fonts/lato-normal-italic.woff2",
-  "fonts/lato-normal.woff": "fonts/lato-normal.woff",
-  "fonts/lato-normal.woff2": "fonts/lato-normal.woff2",
   "fonts/lato-semibold-italic.woff": "fonts/lato-semibold-italic.woff",
-  "fonts/lato-semibold-italic.woff2": "fonts/lato-semibold-italic.woff2",
-  "fonts/lato-semibold.woff": "fonts/lato-semibold.woff",
-  "fonts/lato-semibold.woff2": "fonts/lato-semibold.woff2",
+  "fonts/lato-medium-italic.woff": "fonts/lato-medium-italic.woff",
+  "fonts/lato-light-italic.woff": "fonts/lato-light-italic.woff",
   "fonts/lato-thin-italic.woff": "fonts/lato-thin-italic.woff",
-  "fonts/lato-thin-italic.woff2": "fonts/lato-thin-italic.woff2",
+  "fonts/lato-bold-italic.woff": "fonts/lato-bold-italic.woff",
+  "fonts/lato-heavy-italic.woff": "fonts/lato-heavy-italic.woff",
+  "fonts/lato-semibold.woff": "fonts/lato-semibold.woff",
+  "fonts/lato-light.woff": "fonts/lato-light.woff",
+  "fonts/lato-black-italic.woff": "fonts/lato-black-italic.woff",
+  "fonts/lato-heavy.woff": "fonts/lato-heavy.woff",
+  "fonts/lato-bold.woff": "fonts/lato-bold.woff",
+  "fonts/lato-normal.woff": "fonts/lato-normal.woff",
   "fonts/lato-thin.woff": "fonts/lato-thin.woff",
+  "fonts/lato-medium.woff": "fonts/lato-medium.woff",
+  "fonts/lato-black.woff": "fonts/lato-black.woff",
+  "fonts/lato-hairline-italic.woff": "fonts/lato-hairline-italic.woff",
+  "fonts/lato-hairline.woff": "fonts/lato-hairline.woff",
+  "fonts/MaterialIcons-Regular.ttf": "fonts/MaterialIcons-Regular.ttf",
+  "fonts/lato-normal-italic.woff2": "fonts/lato-normal-italic.woff2",
+  "fonts/lato-semibold-italic.woff2": "fonts/lato-semibold-italic.woff2",
+  "fonts/lato-medium-italic.woff2": "fonts/lato-medium-italic.woff2",
+  "fonts/lato-heavy-italic.woff2": "fonts/lato-heavy-italic.woff2",
+  "fonts/lato-bold-italic.woff2": "fonts/lato-bold-italic.woff2",
+  "fonts/lato-light-italic.woff2": "fonts/lato-light-italic.woff2",
+  "fonts/lato-thin-italic.woff2": "fonts/lato-thin-italic.woff2",
+  "fonts/lato-black-italic.woff2": "fonts/lato-black-italic.woff2",
+  "fonts/lato-bold.woff2": "fonts/lato-bold.woff2",
+  "fonts/lato-heavy.woff2": "fonts/lato-heavy.woff2",
+  "fonts/lato-semibold.woff2": "fonts/lato-semibold.woff2",
+  "fonts/lato-normal.woff2": "fonts/lato-normal.woff2",
+  "fonts/lato-medium.woff2": "fonts/lato-medium.woff2",
+  "fonts/lato-light.woff2": "fonts/lato-light.woff2",
   "fonts/lato-thin.woff2": "fonts/lato-thin.woff2",
-  "img/annotator.css": "img/annotator-icon-sprite.png",
-  "themes/_global/img/appicon/apple-touch-icon-114.png": "themes/_global/img/appicon/apple-touch-icon-114.png",
-  "themes/_global/img/appicon/apple-touch-icon-120.png": "themes/_global/img/appicon/apple-touch-icon-120.png",
-  "themes/_global/img/appicon/apple-touch-icon-144.png": "themes/_global/img/appicon/apple-touch-icon-144.png",
-  "themes/_global/img/appicon/apple-touch-icon-152.png": "themes/_global/img/appicon/apple-touch-icon-152.png",
-  "themes/_global/img/appicon/apple-touch-icon-57.png": "themes/_global/img/appicon/apple-touch-icon-57.png",
-  "themes/_global/img/appicon/apple-touch-icon-72.png": "themes/_global/img/appicon/apple-touch-icon-72.png",
-  "themes/_global/img/appicon/apple-touch-icon-76.png": "themes/_global/img/appicon/apple-touch-icon-76.png",
-  "themes/_global/img/appicon/apple-touch-icon.png": "themes/_global/img/appicon/apple-touch-icon.png",
+  "fonts/lato-black.woff2": "fonts/lato-black.woff2",
+  "fonts/lato-hairline-italic.woff2": "fonts/lato-hairline-italic.woff2",
+  "fonts/lato-hairline.woff2": "fonts/lato-hairline.woff2",
+  "fonts/IcoMoon-Free.ttf": "fonts/IcoMoon-Free.ttf",
+  "fonts/MaterialIcons-Regular.woff": "fonts/MaterialIcons-Regular.woff",
+  "fonts/MaterialIcons-Regular.eot": "fonts/MaterialIcons-Regular.eot",
+  "fonts/Roboto-Medium.woff": "fonts/Roboto-Medium.woff",
+  "fonts/Roboto-Bold.woff": "fonts/Roboto-Bold.woff",
+  "fonts/Roboto-Regular.woff": "fonts/Roboto-Regular.woff",
+  "fonts/Roboto-Light.woff": "fonts/Roboto-Light.woff",
+  "fonts/Roboto-Thin.woff": "fonts/Roboto-Thin.woff",
+  "fonts/MaterialIcons-Regular.woff2": "fonts/MaterialIcons-Regular.woff2",
+  "fonts/Roboto-Medium.woff2": "fonts/Roboto-Medium.woff2",
+  "fonts/Roboto-Regular.woff2": "fonts/Roboto-Regular.woff2",
+  "fonts/Roboto-Bold.woff2": "fonts/Roboto-Bold.woff2",
+  "fonts/Roboto-Light.woff2": "fonts/Roboto-Light.woff2",
+  "fonts/Roboto-Thin.woff2": "fonts/Roboto-Thin.woff2",
   "themes/_global/img/appicon/favicon.ico": "themes/_global/img/appicon/favicon.ico",
-  "themes/_global/img/bg-select.png": "themes/_global/img/bg-select.png",
   "themes/_global/img/icons/Diaspora-asterisk.svg": "themes/_global/img/icons/Diaspora-asterisk.svg",
-  "themes/_global/img/icons/carrot-icon--black.png": "themes/_global/img/icons/carrot-icon--black.png",
-  "themes/_global/img/icons/carrot-icon--white.png": "themes/_global/img/icons/carrot-icon--white.png",
-  "themes/_global/img/icons/diaspora-icon--black.png": "themes/_global/img/icons/diaspora-icon--black.png",
-  "themes/_global/img/icons/diaspora-icon--white.png": "themes/_global/img/icons/diaspora-icon--white.png",
-  "themes/_global/img/icons/scuttle.png": "themes/_global/img/icons/scuttle.png",
-  "themes/_global/img/icons/shaarli.png": "themes/_global/img/icons/shaarli.png",
-  "themes/_global/img/icons/unmark-icon--black.png": "themes/_global/img/icons/unmark-icon--black.png",
-  "themes/_global/img/list.png": "themes/_global/img/list.png",
-  "themes/_global/img/logo-square.svg": "themes/_global/img/logo-square.svg",
-  "themes/_global/img/logo-w.png": "themes/_global/img/logo-w.png",
   "themes/_global/img/logo-wallabag.svg": "themes/_global/img/logo-wallabag.svg",
-  "themes/_global/img/table.png": "themes/_global/img/table.png"
+  "img/annotator-icon-sprite.png?embed": "img/annotator-icon-sprite.png",
+  "img/annotator-glyph-sprite.png?embed": "img/annotator-glyph-sprite.png",
+  "themes/_global/img/logo-w.png": "themes/_global/img/logo-w.png",
+  "themes/_global/img/logo-square.svg": "themes/_global/img/logo-square.svg",
+  "themes/_global/img/appicon/apple-touch-icon-152.png": "themes/_global/img/appicon/apple-touch-icon-152.png",
+  "themes/_global/img/appicon/apple-touch-icon-144.png": "themes/_global/img/appicon/apple-touch-icon-144.png",
+  "themes/_global/img/appicon/apple-touch-icon-120.png": "themes/_global/img/appicon/apple-touch-icon-120.png",
+  "themes/_global/img/appicon/apple-touch-icon-114.png": "themes/_global/img/appicon/apple-touch-icon-114.png",
+  "themes/_global/img/icons/shaarli.png": "themes/_global/img/icons/shaarli.png",
+  "themes/_global/img/appicon/apple-touch-icon-76.png": "themes/_global/img/appicon/apple-touch-icon-76.png",
+  "themes/_global/img/appicon/apple-touch-icon-72.png": "themes/_global/img/appicon/apple-touch-icon-72.png",
+  "themes/_global/img/icons/carrot-icon--white.png": "themes/_global/img/icons/carrot-icon--white.png",
+  "themes/_global/img/appicon/apple-touch-icon-57.png": "themes/_global/img/appicon/apple-touch-icon-57.png",
+  "themes/_global/img/appicon/apple-touch-icon.png": "themes/_global/img/appicon/apple-touch-icon.png",
+  "themes/_global/img/icons/diaspora-icon--black.png": "themes/_global/img/icons/diaspora-icon--black.png",
+  "themes/_global/img/icons/carrot-icon--black.png": "themes/_global/img/icons/carrot-icon--black.png",
+  "themes/_global/img/bg-select.png": "themes/_global/img/bg-select.png",
+  "themes/_global/img/icons/scuttle.png": "themes/_global/img/icons/scuttle.png",
+  "themes/_global/img/icons/unmark-icon--black.png": "themes/_global/img/icons/unmark-icon--black.png",
+  "themes/_global/img/icons/diaspora-icon--white.png": "themes/_global/img/icons/diaspora-icon--white.png",
+  "themes/_global/img/table.png": "themes/_global/img/table.png",
+  "themes/_global/img/list.png": "themes/_global/img/list.png"
 }
