--- a/app/config/tests/parameters_test.mysql.yml
+++ b/app/config/tests/parameters_test.mysql.yml
@@ -4,7 +4,7 @@ parameters:
     test_database_port: 3306
     test_database_name: wallabag_test
     test_database_user: root
-    test_database_password: ~
+    test_database_password: root
     test_database_path: ~
     env(TEST_DATABASE_PATH): ~
     test_database_charset: utf8mb4
