--- a/app/config/tests/parameters_test.pgsql.yml
+++ b/app/config/tests/parameters_test.pgsql.yml
@@ -3,8 +3,8 @@ parameters:
     test_database_host: localhost
     test_database_port:
     test_database_name: wallabag_test
-    test_database_user: travis
-    test_database_password: ~
+    test_database_user: wallabag
+    test_database_password: wallabagrocks
     test_database_path: ~
     env(TEST_DATABASE_PATH): ~
     test_database_charset: utf8
