Fix PHPStan deprecated config option

--- a/phpstan.neon
+++ b/phpstan.neon
@@ -7,8 +7,7 @@ parameters:
     symfony:
         container_xml_path: %rootDir%/../../../var/cache/test/appTestDebugProjectContainer.xml
 
-    # https://github.com/phpstan/phpstan/issues/694#issuecomment-350724288
-    autoload_files:
+    bootstrapFiles:
         - vendor/bin/.phpunit/phpunit-8.3-0/vendor/autoload.php
 
     inferPrivatePropertyTypeFromConstructor: true
