Allow GitHub Actions to run on 2.* branches
Since I created the 2.5.0 branch, GA on PR targeting that branch aren't triggered. This should fix this.

--- a/.github/workflows/continuous-integration.yml
+++ b/.github/workflows/continuous-integration.yml
@@ -2,11 +2,10 @@ name: "CI"
 
 on:
   pull_request:
-    branches:
-      - "master"
   push:
     branches:
-      - "master"
+      - master
+      - 2.*
 
 env:
   PGPASSWORD: wallabagrocks
