--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -209,6 +209,7 @@ scheb_two_factor:
 
     google:
         enabled: "%twofactor_auth%"
+        server_name: "%server_name%"
         issuer: "%server_name%"
         template: WallabagUserBundle:Authentication:form.html.twig
 
