--- a/app/config/wallabag.yml
+++ b/app/config/wallabag.yml
@@ -21,6 +21,7 @@ wallabag_core:
         zh: '简体中文'
         uk: 'Українська'
         hr: 'Hrvatski'
+        cs: 'Čeština'
     items_on_page: 12
     theme: material
     language: '%locale%'
