--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,7 +3,7 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: monthly
+    interval: weekly
     time: "04:00"
     timezone: Europe/Paris
   open-pull-requests-limit: 10
@@ -14,7 +14,7 @@ updates:
 - package-ecosystem: composer
   directory: "/"
   schedule:
-    interval: monthly
+    interval: daily
     time: "04:00"
     timezone: Europe/Paris
   open-pull-requests-limit: 10
