--- a/package.json
+++ b/package.json
@@ -42,8 +42,8 @@
     "autoprefixer": "^10.4.1",
     "babel-loader": "^8.2.3",
     "css-loader": "^6.5.1",
-    "eslint": "^7.27.0",
-    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint": "^8.6.0",
+    "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.25.4",
     "eslint-webpack-plugin": "^3.1.1",
     "file-loader": "^6.2.0",
@@ -60,6 +60,7 @@
     "stylelint-config-standard": "^24.0.0",
     "stylelint-scss": "^4.1.0",
     "stylelint-webpack-plugin": "^3.1.0",
+    "terser-webpack-plugin": "^5.3.0",
     "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
