Added new endpoint for API: config

--- a/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
+++ b/src/Wallabag/ApiBundle/Resources/config/routing_rest.yml
@@ -32,3 +32,8 @@ user:
   type: rest
   resource: "WallabagApiBundle:UserRest"
   name_prefix:  api_
+
+config:
+    type: rest
+    resource: "WallabagApiBundle:ConfigRest"
+    name_prefix:  api_
